fixed socials visibility

--- a/CSS/userinformationstyle.css
+++ b/CSS/userinformationstyle.css
@@ -49,7 +49,7 @@
 }
 
 .social-icons a {
-  color: #272727 !important;
+  color: #464646 !important;
   font-size: 24px;
   transition: color 0.3s;
 }
